--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,7 +20,9 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope="col">Delete </th>
+          <th scope="col">Delete</th>
+          <th scope="col">Edit </th>
+
         </tr>
       </thead>
       <tbody>
@@ -30,6 +32,8 @@
             <td><%= urls[url] %></td>
             <td><form method="POST" action="/urls/<%= url %>/delete">
               <button type="submit">Delete</button></form></td>
+              
+              <td> <button type="submit">Edit</button></form></td></td>
 
           </tr>
 
