--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,8 @@
             <td><form method="POST" action="/urls/<%= url %>/delete">
               <button type="submit">Delete</button></form></td>
               
-              <td> <button type="submit">Edit</button></form></td></td>
+              <td><form method="GET" action="/urls/<%= url %>/">
+                <button type="submit">Edit</button></form></td>
 
           </tr>
 
