--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,7 +17,20 @@
 
 
       
-    <div class="card-footer text-muted"></div>
+      <div class="d-flex justify-content-center">
+      <form class="form-inline" action="/urls/<%= shortURL %>" method="POST"> 
+          <div class="form-group mb-2">
+          <label for="longURL">EDIT:</label>
+          <input class="form-control ml-auto" type="text" value="<%= longURL %>" name="longURL"  style="width: 300px; margin: 1em">
+          <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
+
+
+
+
+      
+    <!-- <div class="card-footer text-muted"></div>  -->
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
