started working on the cookies

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,6 +10,19 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+
+        
+        <form method="Post" action="/login">
+           <!-- <label for="email">Email</label> -->
+          <!-- <input type="text" name="email" id="email" /> -->
+          <!-- <label for="">Password</label> -->
+          <input type=text name="username" id="password" class="Username" placeholder="Username"  /> 
+          <button>Login</button>
+        </form>
+     
+
+
+
       </div>
     </div>
   </nav>
