added a registration page

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,7 +11,12 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
 
-        
+
+        <% if (user !== undefined) { %>
+          <%= user.email %>
+
+        <% } %>
+       
         <form method="Post" action="/login">
            <!-- <label for="email">Email</label> -->
           <!-- <input type="text" name="email" id="email" /> -->
