--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,8 +20,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope="col">Delete</th>
-          <th scope="col">Edit </th>
+          <th scope="col">Edit</th>
+          <th scope="col">Delete </th>
 
         </tr>
       </thead>
@@ -30,18 +30,16 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url].longURL %></td>
-            <td><form method="POST" action="/urls/<%= url %>/delete">
-              <button type="submit">Delete</button></form></td>
-              
-              <td><form method="GET" action="/urls/<%= url %>/">
-                <button type="submit">Edit</button></form></td>
-
-          </tr>
-          
-        <% } %>
+            <td><a href="/urls/<%= url %>" class="btn btn-outline-primary">Edit</a></td>
+              <td>
+                <form method="POST" action="/urls/<%= url %>/delete">
+                  <button type="submit" class="btn btn-outline-danger">Delete</button>
+                </form>
+              </td> 
+            </tr>         
+          <% } %>
   
         
-
 
       </tbody>
     </table>
